# TTApp

./: .gitignore  APPLICATION_OVERVIEW.md  PROGRESS.md  README.md  SETUP.md  SETUP_DATABASE.md  app.py  apprequirements.txt  main.py  models.py  pyproject.toml
.github/workflows/: claude.yml
static/: admin.css  admin.js  script.js  style.css
static/css/: timetable.css
static/js/: timetable.js
templates/: admin.html  class_timetable.html  dashboard.html  index.html  login.html  signup.html
